adding maven nature with maven wrapper